<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/mi_search"
          android:title="@string/search"
          android:visible="true"
          android:icon="@drawable/ic_search"
          android:orderInCategory="1"
          app:iconTint="@color/opaqueTextColor"
          app:showAsAction="ifRoom|collapseActionView"/>

    <item
            android:id="@+id/mi_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            android:visible="true"
            android:orderInCategory="2"
            app:iconTint="@color/opaqueTextColor"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/mi_delete"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete"
            android:visible="false"
            android:orderInCategory="1"
            app:iconTint="@color/text_color_secondary"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/mi_select_all"
            android:icon="@drawable/ic_all"
            android:title="@string/select_all"
            android:visible="false"
            android:orderInCategory="2"
            app:iconTint="@color/text_color_secondary"
            app:showAsAction="ifRoom"/>
</menu>