<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".activities.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            android:id="@+id/appBarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/myToolbarSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:titleTextColor="@color/textColor"
                app:navigationIcon="@drawable/ic_back"
                android:background="@color/colorBackground"
                app:titleTextAppearance="@style/Toolbar.TitleText">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/appearance"
              android:textColor="@color/colorAccent"
              android:textSize="18sp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
              android:id="@+id/textView"
              android:layout_marginTop="24dp"
              android:layout_marginStart="18dp"
    >
    </TextView>

    <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/themeTogglgeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="16dp">

        <Button
                android:id="@+id/defaultBtn"
                android:text="@string/defaultTheme"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        </Button>

        <Button
                android:id="@+id/darkBtn"
                android:text="@string/dark"
                android:textColor="@color/textColor"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        </Button>

        <Button
                android:id="@+id/lightBtn"
                android:text="@string/light"
                android:textColor="@color/textColor"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        </Button>

    </com.google.android.material.button.MaterialButtonToggleGroup>
    <TextView
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textVersione"
            android:textColor="@color/opaqueTextColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:id="@+id/descriptionThemeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/default_description"
            android:textColor="@color/text_color_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/themeTogglgeGroup"
            android:layout_marginTop="22dp"
            android:layout_marginStart="16dp"/>
    <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionThemeTextView" android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>