<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="17dp"
        android:background="@drawable/dialog_radius">

    <TextView
            android:id="@+id/alertDeleteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_delete"
            android:textColor="@color/allTabColor"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
            android:id="@+id/alertDeleteSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_folder_alert"
            android:textColor="@color/text_color_secondary"
            android:textSize="17sp"
            android:lineSpacingExtra="3dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alertDeleteTitle">
    </TextView>

    <Button
            android:text="@string/confirm"
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/allTabColor"
            android:background="@color/colorOnSurface"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_cancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/alertDeleteSubtitle"
            android:layout_marginTop="16dp"/>
    <Button
            android:id="@+id/button_cancel"
            android:text="@string/cancel"
            android:textColor="@color/opaqueTextColor"
            android:stateListAnimator="@null"
            android:background="@color/colorOnSurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btn_confirm"
            app:layout_constraintTop_toBottomOf="@+id/alertDeleteSubtitle"
            android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>