<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:padding="17dp"
        android:background="@drawable/dialog_radius">

    <TextView
            android:id="@+id/new_category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_a_new_category"
            android:textColor="@color/text_color_secondary"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <EditText
            android:id="@+id/et_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_secondary"
            android:textSize="17sp"
            android:inputType="text"
            android:maxLength="16"
            android:hint="@string/category"
            android:text="Categoria"
            android:background="@drawable/custom_et"
            android:textColorHint="@color/opaqueTextColor"
            android:drawableStart="@drawable/custom_category_icon"
            android:drawablePadding="12dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/new_category_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent">

    </EditText>

    <Button
            android:text="@string/confirm"
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/allTabColor"
            android:background="@color/colorOnSurface"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/button_cancel"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:id="@+id/button_cancel"
            android:text="@string/cancel"
            android:textColor="@color/allTabColor"
            android:stateListAnimator="@null"
            android:background="@color/colorOnSurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btn_confirm"/>


</androidx.constraintlayout.widget.ConstraintLayout>