<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/orderNotesDialog"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingBottom="12dp"
        android:paddingTop="24dp"
        android:background="@drawable/dialog_radius"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:behavior_peekHeight="60dp">

    <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_notes_by"
            android:textColor="@color/text_color_secondary"
            android:textSize="20sp"
            android:paddingBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
    </TextView>


    <LinearLayout
            android:id="@+id/linearLayoutDataLast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_desc"/>

        <TextView
                android:id="@+id/textView1"
                android:text="@string/date_last"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp"
                android:textColor="@color/text_color_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutDataLast"
            android:id="@+id/linearLayoutDataFirst"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_asc"/>

        <TextView
                android:id="@+id/textView2"
                android:text="@string/date_first"
                android:layout_marginStart="24dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/text_color_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>


    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutDataFirst"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_title"/>
        <TextView
                android:id="@+id/textView3"
                android:text="@string/title"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:textColor="@color/text_color_secondary"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:textSize="17sp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayoutCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_category"/>
        <TextView
                android:id="@+id/textView4"
                android:text="@string/category"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:textColor="@color/text_color_secondary"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:textSize="17sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>